# aiquest-minitel-client

./: .coverage  .gitignore  CLAUDE.md  CODEX.md  GEMINI_REVIEW.md  NEO.md  README.md  faq.md  key_data.md  pyproject.toml  requirements.txt
docs/: NEO.md  instruction.md  mission_brief.md  protocol.md  terms.md
minitel/: __init__.py  client.py  constants.py  protocol.py  replay.py  session.py  validation.py
sessions/: session_20250917_095542.json
tests/: test_client.py  test_client_extended.py  test_protocol.py  test_replay.py  test_session.py  test_validation.py
